fix: 플레이어의 승패 출력 순서가 뒤섞이는 이슈 해결